[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/UI/ChoiceBubble/choice_hover.tres" type="StyleBox" id=1]
[ext_resource path="res://nodes/UI/ChoiceBubble/choice_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/choice_bubble/ChoiceBubbleGroup.tres" type="ButtonGroup" id=3]
[ext_resource path="res://nodes/UI/ChoiceBubble/Choice.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/MonospaceTypewriter.ttf" type="DynamicFontData" id=5]


[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Choice" type="Button"]
margin_right = 170.0
margin_bottom = 34.0
focus_mode = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
enabled_focus_mode = 0
group = ExtResource( 3 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -10.5
margin_right = 39.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TEST"
[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_active"]
[connection signal="focus_exited" from="." to="." method="_on_iddle"]
[connection signal="mouse_entered" from="." to="." method="_on_active"]
[connection signal="mouse_exited" from="." to="." method="_on_iddle"]
